# advanced-knowledge-base

./: COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPARISON_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  README.md  advanced-knowledge-graph-concepts.md  docker-compose.yml  package.json
benchmarks/: comprehensive-benchmark.js
implementations/cognex-language/: README.md  cognex_compiler.py
implementations/custom-engine/src/: CustomKnowledgeEngine.js
implementations/datalog-engine/: README.md  datalog_engine.py
implementations/federated-kg-network/: README.md
implementations/gpu-accelerated/: Cargo.toml  README.md
implementations/gpu-accelerated/src/: algorithms.rs  benchmarks.rs  core.rs  cuda_kernels.rs  distributed.rs  error.rs  gpu.rs  graph.rs  kernels.rs  lib.rs  memory.rs  metrics.rs  simd.rs
implementations/hybrid-multilang-2025/: Cargo.toml  README.md
implementations/hybrid-multilang-2025/src/: lib.rs
implementations/hybrid-ultra-fast/: Cargo.toml  README.md  build.rs
implementations/hybrid-ultra-fast/src/: algorithms.rs  bridge.rs  config.rs  core.rs  distributed.rs  error.rs  graph.rs  lib.rs  metrics.rs  query.rs  simd.rs  storage.rs
implementations/hypergraph/src/: HypergraphKB.js
implementations/indradb-reified-engine/: Cargo.toml  README.md
implementations/indradb-reified-engine/src/: engine.rs  lib.rs  query.rs  reification.rs  transaction.rs  types.rs  utils.rs
implementations/kuzu-reified-engine/: Cargo.toml  README.md
implementations/kuzu-reified-engine/src/: engine.rs  lib.rs  query.rs  reification.rs  schema.rs  types.rs  utils.rs
implementations/langgraph-agents/: README.md  kg_construction_workflow.py
implementations/neo4j-graph/src/: KnowledgeBase.js
implementations/neo4j-reified-engine/: Cargo.toml  README.md
implementations/neo4j-reified-engine/src/: batch.rs  connection.rs  cypher.rs  engine.rs  lib.rs  reification.rs  temporal.rs  types.rs
implementations/neuromorphic-kg-processor/: README.md
implementations/prolog-kb/: README.md  kb_core.pl  reification.pl  temporal.pl
implementations/quantum-distributed-2025/: Cargo.toml
implementations/quantum-distributed-2025/src/: consensus.rs  distributed.rs  lib.rs  quantum.rs
implementations/quantum-graph-engine/: Cargo.toml  README.md
implementations/quantum-graph-engine/benches/: benchmark_utils.rs  performance_benchmarks.rs
implementations/quantum-graph-engine/examples/: complete_demo.rs
implementations/quantum-graph-engine/src/: algorithms.rs  asm.rs  distributed.rs  gpu.rs  lib.rs  metrics.rs  query.rs  simd.rs  storage.rs  types.rs
implementations/quantum-graph-engine/src/cpp/: graph_ops.hpp  mod.rs
implementations/rapidsore-inspired-engine/: Cargo.toml  README.md
implementations/rapidsore-inspired-engine/src/: algorithms.rs  assembly_ops.rs  columnar.rs  decoupled.rs  gpu_kernels.rs  lib.rs  lock_free.rs  query.rs  simd_ops.rs  storage.rs  types.rs
implementations/redis-graph/src/: RedisGraphKB.js
implementations/rust-cpp-fortran-2025/: Cargo.toml
implementations/rust-cpp-fortran-2025/src/: assembly.rs  benchmarks.rs  core.rs  cpp_backend.rs  error.rs  fortran_bridge.rs  lib.rs  memory.rs  metrics.rs  simd.rs
implementations/rust-cpp-fortran-2025/src/cpp_backend/: ultra_fast_graph.cpp  ultra_fast_graph.hpp
implementations/semantic-web-rdf/: README.md  rdf_store.py  sparql_engine.py
implementations/temporal-knowledge-evolution/: README.md
implementations/ultra-fast-cpp/: CMakeLists.txt  README.md
implementations/ultra-fast-cpp/include/ultra_fast_kg/algorithms/: algorithms.hpp
implementations/ultra-fast-cpp/include/ultra_fast_kg/core/: graph.hpp  types.hpp
implementations/ultra-fast-cpp/include/ultra_fast_kg/query/: query_engine.hpp
implementations/ultra-fast-cpp/include/ultra_fast_kg/simd/: simd_operations.hpp
implementations/ultra-fast-cpp/include/ultra_fast_kg/storage/: csr_matrix.hpp  edge_storage.hpp  memory_manager.hpp  node_storage.hpp
implementations/ultra-fast-cpp/src/core/: graph.cpp
implementations/ultra-fast-cpp/src/main/: benchmark.cpp
implementations/ultra-fast-rust/: Cargo.toml  README.md
implementations/ultra-fast-rust/benches/: graph_operations.rs
implementations/ultra-fast-rust/examples/: basic_usage.rs  distributed_usage.rs
implementations/ultra-fast-rust/src/: algorithms.rs  distributed.rs  graph.rs  lib.rs  metrics.rs  query.rs  simd.rs  storage.rs
implementations/ultra-fast-rust/src/query/: pattern_matcher.rs  query_planner.rs  result_aggregator.rs
implementations/universal-graph-engine/: BEGINNER_GUIDE.md  CMakeLists.txt  DOCUMENTATION.md  README.md  README_CLI.md
implementations/universal-graph-engine/bindings/cpp/: universal_graph.hpp
implementations/universal-graph-engine/bindings/rust/: lib.rs
implementations/universal-graph-engine/examples/: CMakeLists.txt  cli_demo.ug  complex_graph_demo.ug  infinite_complexity_demo.c  social_network.ug  statistical_knowledge_graph.c  tutorial_basic.ug
implementations/universal-graph-engine/gui/: README.md  app.js  graph-engine.js  graph-ui.js  index.html  persistence.js  styles.css
implementations/universal-graph-engine/include/: universal_graph.h
implementations/universal-graph-engine/src/: universal_graph.c
implementations/universal-graph-engine/src/cli/: main.c  ug_cli.c  ug_cli.h  ug_cli_visualization.c
src/api/: graphql-schema.js  server.js
