[package]
name = "kuzu-reified-engine"
version = "0.1.0"
edition = "2021"
authors = ["Research Team <research@example.com>"]
description = "High-performance graph database with edge reification using Kuzu backend"
license = "MIT"
repository = "https://github.com/research/kuzu-reified-engine"
keywords = ["graph", "database", "kuzu", "reification", "relationships"]
categories = ["database", "data-structures"]

[dependencies]
# Kuzu integration
kuzu = "0.5"
kuzu-sys = "0.5"

# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Performance optimization
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
ahash = "0.8"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Advanced features
regex = "1.10"
itertools = "0.12"
once_cell = "1.19"
num_cpus = "1.16"
sha2 = "0.10"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["kuzu-integration", "async-runtime"]

# Core features
kuzu-integration = []
async-runtime = ["tokio/full"]

# Performance features
simd = []
optimized = ["simd"]

# Development features
benchmarks = ["criterion"]
profiling = []

[profile.release]
# Maximum optimization for graph operations
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false

[profile.bench]
# Optimization for accurate benchmarking
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
overflow-checks = false

[[bench]]
name = "reification_benchmarks"
harness = false

[[bench]]
name = "kuzu_integration_benchmarks"
harness = false

[[example]]
name = "basic_reification"
path = "examples/basic_reification.rs"

[[example]]
name = "complex_relationships"
path = "examples/complex_relationships.rs"

[[example]]
name = "performance_demo"
path = "examples/performance_demo.rs"

[[example]]
name = "cypher_extensions"
path = "examples/cypher_extensions.rs"