[package]
name = "quantum-graph-engine"
version = "0.1.0"
edition = "2021"
authors = ["Igor Kan <igor@example.com>"]
description = "The fastest knowledge graph database engine ever built - targeting billions+ nodes with sub-millisecond queries"
license = "MIT"
repository = "https://github.com/igor-kan/quantum-graph-engine"
keywords = ["graph", "database", "knowledge-graph", "performance", "billion-scale"]
categories = ["database", "data-structures", "algorithms", "science"]

[dependencies]
# Core performance dependencies
rayon = "1.7"                    # Data parallelism
crossbeam = "0.8"               # Lock-free data structures
parking_lot = "0.12"            # Fast synchronization primitives
ahash = "0.8"                   # Fast hashing
dashmap = "5.4"                 # Concurrent hash map
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"                 # Fast binary serialization
memmap2 = "0.7"                 # Memory-mapped files
zstd = "0.13"                   # Fast compression
lz4_flex = "0.11"              # Ultra-fast compression

# SIMD and low-level optimizations
bytemuck = "1.13"              # Safe transmutes for SIMD
wide = "0.7"                   # SIMD utilities

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Distributed computing
mpi = { version = "0.6", optional = true }

# GPU computing (optional)
cudarc = { version = "0.9", optional = true }
candle = { version = "0.3", optional = true }

# Storage backends
rocksdb = { version = "0.21", optional = true }
sled = { version = "0.34", optional = true }

# Monitoring and metrics
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"

# FFI for C++ integration
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cc = "1.0"

[dev-dependencies]
# Comprehensive benchmarking suite
criterion = { version = "0.5", features = ["html_reports", "csv_output"] }
criterion-perf-events = "0.4"
criterion-cycles-per-byte = "0.6"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

# Testing utilities
proptest = "1.0"
tempfile = "3.0"
pretty_assertions = "1.4"

# Additional benchmark dependencies
num_cpus = "1.16"
fastrand = "2.0"
once_cell = "1.19"

[features]
default = ["rocksdb-backend", "compression"]
# Storage backends
rocksdb-backend = ["rocksdb"]
sled-backend = ["sled"]
# Performance features
simd = []
gpu = ["cudarc", "candle"]
distributed = ["mpi"]
compression = []
# Safety features
safe-mode = []

[profile.release]
# Maximum optimization for release builds
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false

[profile.bench]
# Optimizations for benchmarking
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[[bench]]
name = "gpu_benchmarks"
harness = false

[[bench]]
name = "distributed_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "billion_nodes"
path = "examples/billion_nodes.rs"

[[example]]
name = "distributed_cluster"
path = "examples/distributed_cluster.rs"

[[bin]]
name = "quantum-server"
path = "src/bin/server.rs"

[[bin]]
name = "quantum-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "quantum-benchmark"
path = "src/bin/benchmark.rs"